--- a/Documentation/UsersDocumentation/APIUsersDocumentation.html
+++ b/Documentation/UsersDocumentation/APIUsersDocumentation.html
@@ -184,7 +184,7 @@ public interface UserRepository extends JpaRepository<User, Integer> {
 
 import HRComponents.DTOs.EntityDTOs.UserDTO;
 import HRComponents.Entitys.Users;
-import HRComponents.Mapper.UserMapper;
+import HRComponents.Mapper.MapperEntitys.UserMapper;
 import HRComponents.Repostorys.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
